--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
+    "node-sass": "^8.0.0",
     "react": "18.2.0",
-    "react-native": "0.71.3",
     "react-dom": "18.2.0",
+    "react-native": "0.71.4",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
-    "@expo/webpack-config": "^18.0.1"
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-sass-transformer": "^2.0.0",
+    "sass": "^1.59.3"
   },
   "private": true
 }
