--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/cli": "^10.2.1",
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
     "node-sass": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native-eject": "^0.2.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "expo-constants": "~14.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
