--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@react-native-community/cli": "^10.2.1",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.6",
+    "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.4",
     "node-sass": "^8.0.0",
     "react": "18.2.0",
@@ -20,7 +23,8 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
     "yarn": "^1.22.19",
-    "expo-constants": "~14.2.1"
+    "react-native-screens": "~3.20.0",
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
