--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native-eject": "^0.2.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
-    "yarn": "^1.22.19",
-    "react-native-screens": "~3.20.0",
-    "react-native-safe-area-context": "4.5.0"
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
