--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-native-community/cli": "^10.2.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.5",
     "expo": "~48.0.6",
     "expo-constants": "~14.2.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "node-sass": "^8.0.0",
     "react": "18.2.0",
@@ -25,7 +27,9 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "expo-secure-store": "~12.1.1",
+    "expo-file-system": "~15.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
