--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "axios": "^1.3.5",
     "expo": "~48.0.6",
     "expo-constants": "~14.2.1",
+    "expo-file-system": "~15.2.2",
+    "expo-permissions": "^14.1.1",
+    "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "node-sass": "^8.0.0",
+    "pako": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native-eject": "^0.2.0",
@@ -27,9 +31,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
-    "yarn": "^1.22.19",
-    "expo-secure-store": "~12.1.1",
-    "expo-file-system": "~15.2.2"
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
