--- a/package.json
+++ b/package.json
@@ -3,36 +3,38 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
-    "expo": "~49.0.7",
-    "expo-constants": "^14.4.2",
-    "expo-font": "~11.4.0",
-    "expo-status-bar": "~1.6.0",
-    "lottie-react-native": "5.1.6",
+    "expo": "~48.0.18",
+    "expo-constants": "~14.2.1",
+    "expo-font": "~11.1.1",
+    "expo-status-bar": "~1.4.4",
+    "lottie-react-native": "5.1.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
-    "react-redux": "^8.1.2"
+    "react-native": "0.71.8",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-redux": "^8.1.2",
+    "expo-splash-screen": "~0.18.2",
+    "react-native-gesture-handler": "~2.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.23.0",
     "eslint": "^8.47.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.28.1",
