--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
     "global-require": "off",
     "no-console": "off",
     "import/prefer-default-export": "off",
+    "no-underscore-dangle": "off",
     "react/no-unstable-nested-components": [
       "error",
       {
