--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
     "no-console": "off",
     "import/prefer-default-export": "off",
     "no-underscore-dangle": "off",
+    "react/jsx-props-no-spreading": "off",
     "react/no-unstable-nested-components": [
       "error",
       {
