--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
     "import/prefer-default-export": "off",
     "no-underscore-dangle": "off",
     "react/jsx-props-no-spreading": "off",
+    "react/forbid-prop-types": "off",
     "react/no-unstable-nested-components": [
       "error",
       {
