--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "СибГУТИ Студент",
-    "slug": "sibsutis-schedule",
+    "slug": "sibsutis-student",
     "version": "1.1.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
